--- a/sign.html
+++ b/sign.html
@@ -15,7 +15,7 @@
         <div class="buttonsDiv">
             <a class="buttonMenu" href="sign.html">Cadastro</a>
             <a class="buttonMenu" href="login.html">Login</a>
-            <a class="buttonMenu" href="#">Benefícios</a>
+            <a class="buttonMenu" href="registros.html">ADM Log</a>
             <a class="buttonMenu" href="#">Contato</a>
            
         </div>
@@ -28,7 +28,7 @@
     <div class="mainContentContainer">
 
         <h2>Cadastro de Cliente</h2>
-        <form id="cadastroForm" method="POST">
+        <form action="confirmarCadastro.html" id="cadastroForm" method="POST">
             <div class="form-group">
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" required>
