--- a/registros.html
+++ b/registros.html
@@ -9,7 +9,7 @@
 <body class="newbackground">
     <nav class="menuNav">
         <div class="containerMenu">
-        <button class="menu"></button>
+            <a class="menu" href="landing.html"></a>
         </div>
 
         <div class="buttonsDiv">
@@ -22,7 +22,7 @@
 
         <div class="searchBar">SEARCH BAR PLACEHOLDER</div>
         
-        <div class="profileSpace"></div>
+        <a href="profile.html" class="profileSpace"></a>
     </nav>
 
     <div class="grid-container" id="gridCadastro">
