--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="menuNav">
         <div class="containerMenu">
-            <a class="menu" href="landing.html"></a>
+        <a class="menu" href="landing.html"></a>
         </div>
 
         <div class="buttonsDiv">
@@ -28,52 +28,54 @@
     <div class="mainContentContainer">
 
         <h2>Cadastro de Cliente</h2>
-        <form action="confirmarCadastro.html" id="cadastroForm" method="POST">
+        <div id="cadastroForm">
             <div class="form-group">
                 <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" required>
+                <input type="text" value="Rafael" id="nome" name="nome" required disabled >
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" value="Teste@gmail.com" id="email" name="email" required disabled>
             </div>
             <div class="form-group">
                 <label for="sexo">Sexo:</label>
-                <select id="sexo" name="sexo" required>
+                <select id="sexo" name="sexo" required disabled>
                 <option value="">Selecione</option>
-                <option value="masculino">Masculino</option>
+                <option value="masculino" selected>Masculino</option>
                 <option value="feminino">Feminino</option>
                 <option value="outro">Outro</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="telefone">Telefone:</label>
-                <input type="tel" id="telefone" name="telefone" required>
+                <input value="11987654321" type="tel" id="telefone" name="telefone" required disabled>
             </div>
             <div class="form-group">
                 <label for="senha">Senha:</label>
-                <input type="password" id="senha" name="senha" required>
+                <input value="123" type="password" id="senha" name="senha" required disabled>
             </div>
             <div class="form-group">
               <label for="cpf">CPF:</label>
-              <input type="text" id="cpf" name="cpf" required>
+              <input value="76576576577" type="text" id="cpf" name="cpf" disabled>
             </div>
             <div class="form-group">
               <label for="cnpj">CNPJ: (opcional)</label>
-              <input type="text" id="cnpj" name="cnpj">
+              <input type="text" id="cnpj" name="cnpj" disabled>
             </div>
-            <button class="signFormButton" onclick="cadastroFunc();" type="submit">Cadastrar</button>
-    </form>
+            <div class="buttonsContainerForm">
+                <button class="signFormButton addMargin" onclick="editForm();" id="editButton">Editar</button>
+                <button class="signFormButton addMargin desactivatedButton" onclick="saveForm();" id="saveButton">Salvar</button>
+            </div>
+            
+    </div>
 
     </div>
 
-    <div class="pagesContainer">
-
-    </div>
  
 
 
 
-    <script src="valida.js"></script>
+    <script src="editScript.js"></script>
+
 </body>
 </html>
