--- a/landing.html
+++ b/landing.html
@@ -7,7 +7,7 @@
     <title>Landingpage</title>
 </head>
 <body>
-    <img class="background-img" src="./img/MicrosoftTeams-image.png" alt="">
+    <img class="background-img" src="./img/MicrosoftTeams-image (2).png" alt="">
     <div class="background-filtro"></div>
  
     <nav class="menuNav">
@@ -32,10 +32,11 @@
    
     <div class="div-imagens">
         
-        <img src="./img/MicrosoftTeams-image (2).png" class="imgList atual" alt="">
-        <img src="./img/MicrosoftTeams-image (3).png" class="imgList" alt="">
+        <img src="./img/MicrosoftTeams-image (3).png" class="imgList atual" alt="">
         <img src="./img/MicrosoftTeams-image (4).png" class="imgList" alt="">
         <img src="./img/MicrosoftTeams-image (5).png" class="imgList" alt="">
+        <img src="./img/MicrosoftTeams-image (6).png" class="imgList" alt="">
+        <img src="./img/MicrosoftTeams-image (7).png" class="imgList" alt="">
     </div>
     </div>
 
