--- a/transferencias/pix/pix.html
+++ b/transferencias/pix/pix.html
@@ -48,6 +48,13 @@
             <input required="" type="password" name="senha" autocomplete="off" class="input">
             <label class="label-text">Senha</label>
         </div>
+        <div class="div-textarea">
+            <textarea name="descricao" id="descricao" class="input-textarea"></textarea>
+            <label class="label-textarea">Descrição</label>
+        </div>
+        <div>
+            <input required="" type="button" name="transferir" name="transferir" value="Transferir" class="botao-transferir">
+        </div>
     </div>
 </body>
 </html>
