Valida Pix e Ted
Fiz as validações
Arrumei o bug nos campos de descrição

--- a/landingpage/landingpage.html
+++ b/landingpage/landingpage.html
@@ -10,11 +10,11 @@
     <nav>
         <div class="div-h-l">
             <div class="div-burguer">
-                <img class="img-burguer" src="../../assets/Menu Burger.png" alt="menu-burguer">
+                <img class="img-burguer" src="../assets/Menu Burger.png" alt="menu-burguer">
             </div>
-            <img class="logo" src="../../assets/DimDim-removebg-preview.png" alt="logo Dimdim">
+            <img class="logo" src="../assets/DimDim-removebg-preview.png" alt="logo Dimdim">
         </div>
-        <img class="img-pesquisar" src="../../assets/icons8-pesquisar-100.png" alt="Pesquisar">
+        <img class="img-pesquisar" src="../assets/icons8-pesquisar-100.png" alt="Pesquisar">
         <div class="pesquisar">
             <input required="" type="text" class="input">
             <span class="bar"></span>
