--- a/landingpage/landingpage.html
+++ b/landingpage/landingpage.html
@@ -49,30 +49,34 @@
     <section class="secao-2">
         <div class="div-horizontal">
             <div class="div-opcoes">
-                <h3>Opção</h3>
-                <p>Teste</p>
+                <h2 class="titulo-atividades">Transferências</h2>
+                <a href="../transferencias/telaopcao/telaopcao.html">
+                    <img class="img-atividades" src="../assets/Atividade 1.png" alt="atividade1">
+                </a>
             </div>
             <div class="div-opcoes">
-                <h3>Opção</h3>
-                <p>Teste</p>
+                <h2 class="titulo-atividades">Extrato</h2>
+                <a href="../cartao/extrato_cartao/extrato_cartao.html">
+                    <img class="img-atividades" src="../assets/Atividade 2.png" alt="atividade2">
+                </a>
             </div>
             <div class="div-opcoes">
-                <h3>Opção</h3>
-                <p>Teste</p>
+                <h2 class="titulo-atividades">Investimentos</h2>
+                <img class="img-atividades" src="../assets/Atividade 3.png" alt="atividade3">
             </div>
         </div>
         <div class="div-horizontal">
             <div class="div-opcoes">
-                <h3>Opção</h3>
-                <p>Teste</p>
+                <h2 class="titulo-atividades">Emprestimos</h2>
+                <img class="img-atividades" src="../assets/Atividade 4.png" alt="atividade4">
             </div>
             <div class="div-opcoes">
-                <h3>Opção</h3>
-                <p>Teste</p>
+                <h2 class="titulo-atividades">Vantagens</h2>
+                <img class="img-atividades" src="../assets/Atividade 5.png" alt="atividade5">
             </div>
             <div class="div-opcoes">
-                <h3>Opção</h3>
-                <p>Teste</p>
+                <h2 class="titulo-atividades">FAQ</h2>
+                <img class="img-atividades" src="../assets/Atividade 6.png" alt="atividade6">
             </div>
         </div>
     </section>
